--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title></title>
+    <title>Crystal collector</title>
 </head>
 <body>
 
@@ -17,14 +17,17 @@
             <h2>Target score: <span id="target-score">target score goes here</span></h2>
         </div>
         <div id="crystals">
-            <ul>
-                <li> <a href="#" class="crystal crystal1">Crystal 1</a> </li>
-                <li> <a href="#" class="crystal crystal2">Crystal 2</a> </li>
-                <li> <a href="#" class="crystal crystal3">Crystal 3</a> </li>
-                <li> <a href="#" class="crystal crystal4">Crystal 4</a> </li>
-                
-            </ul>
+            <form action="">
 
+                <ul>
+                    <li> <button class="crystal crystal-1" value="0">Crystal 1</a> </li>
+                    <li> <button class="crystal crystal-2" value="0">Crystal 2</a> </li>
+                    <li> <button class="crystal crystal-3" value="0">Crystal 3</a> </li>
+                    <li> <button class="crystal crystal-4" value="0">Crystal 4</a> </li>
+                    
+                </ul>
+                <p><button id="start-game">Start game</button></p>
+            </form>
 
         </div>
 
