Add type=button to buttons

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <form action="">
 
                 <ul>
-                    <li> <button class="crystal crystal-1" value="0">Crystal 1</a> </li>
-                    <li> <button class="crystal crystal-2" value="0">Crystal 2</a> </li>
-                    <li> <button class="crystal crystal-3" value="0">Crystal 3</a> </li>
-                    <li> <button class="crystal crystal-4" value="0">Crystal 4</a> </li>
+                    <li> <button type="button" class="crystal crystal-1" value="0">Crystal 1</a> </li>
+                    <li> <button type="button" class="crystal crystal-2" value="0">Crystal 2</a> </li>
+                    <li> <button type="button" class="crystal crystal-3" value="0">Crystal 3</a> </li>
+                    <li> <button type="button" class="crystal crystal-4" value="0">Crystal 4</a> </li>
                     
                 </ul>
-                <p><button id="start-game">Start game</button></p>
+                <p><button type="button" id="start-game">Start game</button></p>
             </form>
 
         </div>
