Add game logic, win/loss indicators

--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,9 @@
     <div class="container">
         <div id="scoreboard">
             <h2>Target score: <span id="target-score">target score goes here</span></h2>
+            <h2>Current score: <span id="current-score">current score goes here</span></h2>
+            <h3>Wins: <span id="span-wins">wins goes here</span></h3>
+            <h3>Losses: <span id="span-losses">losses goes here</span></h3>
         </div>
         <div id="crystals">
                 <ul>
