--- a/index2.html
+++ b/index2.html
@@ -27,22 +27,22 @@
         </div>
         <div id="crystals">
                 <ul>
-                    <li><img src="assets/images/Diamond-icon.png" alt="Crystal 1" data-array-index="0" class="crystal-image">
+                    <li><img src="assets/images/Diamond-icon.png" alt="Crystal 1" data-array-index="0" class="crystal-image crystal">
                         <button type="button" class="crystal crystal-1" data-array-index="0" value="0">Crystal 1</button>
                     </li>
-                    <li><img src="assets/images/Ruby-icon.png" alt="Crystal 1" data-array-index="1" class="crystal-image">
+                    <li><img src="assets/images/Ruby-icon.png" alt="Crystal 1" data-array-index="1" class="crystal-image crystal">
                         <button type="button" class="crystal crystal-2" data-array-index="1" value="0">Crystal 2</button>
                     </li>
-                    <li><img src="assets/images/Sapphire-icon.png" alt="Crystal 1" data-array-index="2" class="crystal-image">
+                    <li><img src="assets/images/Sapphire-icon.png" alt="Crystal 1" data-array-index="2" class="crystal-image crystal">
                         <button type="button" class="crystal crystal-3" data-array-index="2" value="0">Crystal 3</button>
                     </li>
-                    <li><img src="assets/images/Topaz-icon.png" alt="Crystal 1" data-array-index="3" class="crystal-image">
+                    <li><img src="assets/images/Topaz-icon.png" alt="Crystal 1" data-array-index="3" class="crystal-image crystal">
                         <button type="button" class="crystal crystal-4" data-array-index="3" value="0">Crystal 4</button>
                     </li>
                 
                 </ul>
                 <p><button type="button" id="start-game">Start game</button></p>
-                <p><img src="assets/images/crystal1.jpg" alt="Crystal 1" class="crystal-image"></p>
+                <p><img src="assets/images/crystal1.jpg" alt="Crystal 1"></p>
                 
         </div>
         <div id="status">
